Closed Bug 1794551 Opened 2 years ago Closed 2 years ago

nsCookieBannerService.cpp:137:7: error: ‘NS_NewRunnableFunction’ was not declared in this scope

Categories

(Firefox :: Untriaged, defect)

defect

Tracking

()

RESOLVED FIXED
107 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox105 --- unaffected
firefox106 --- unaffected
firefox107 --- fixed

People

(Reporter: petr.sumbera, Assigned: pbz)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce:

Solaris build fails with:

20:06.24 /builds/psumbera/mozilla-central-build/toolkit/components/cookiebanners/nsCookieBannerService.cpp: In member function ‘nsresult mozilla::nsCookieBannerService::Init()’:
20:06.24 /builds/psumbera/mozilla-central-build/toolkit/components/cookiebanners/nsCookieBannerService.cpp:137:7: error: ‘NS_NewRunnableFunction’ was not declared in this scope
20:06.24   137 |       NS_NewRunnableFunction("CookieBannerListService init startup",
20:06.24       |       ^~~~~~~~~~~~~~~~~~~~~~
20:06.24 /builds/psumbera/mozilla-central-build/toolkit/components/cookiebanners/nsCookieBannerService.cpp:139:27: error: ‘Idle’ is not a member of ‘mozilla::EventQueuePriority’
20:06.24   139 |       EventQueuePriority::Idle);
20:06.24       |                           ^~~~
20:06.30 /builds/psumbera/mozilla-central-build/toolkit/components/cookiebanners/nsCookieBannerService.cpp:136:17: error: ‘NS_DispatchToCurrentThreadQueue’ was not declared in this scope
20:06.30   136 |   nsresult rv = NS_DispatchToCurrentThreadQueue(
20:06.30       |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

The first bad revision is:
changeset: 637340:de07e2b641d8
user: Paul Zuehlcke <pbz@mozilla.com>
date: Mon Oct 10 08:00:26 2022 -0700
description:
Bug 1784868 - Defer CookiebannerListService init to prevent early main-thread IO. r=timhuang

Differential Revision: https://phabricator.services.mozilla.com/D158941
Keywords: regression
Regressed by: 1784868

:pbz, since you are the author of the regressor, bug 1784868, could you take a look? Also, could you set the severity field?

For more information, please visit auto_nag documentation.

Flags: needinfo?(pbz)

Thanks for filing a bug. I don't have a Solaris machine to test this with, but I suspect this just fails because of missing includes. Could you test if it builds properly with the attached patch applied? Thank you!

Flags: needinfo?(pbz) → needinfo?(petr.sumbera)

Yes, the patch file resolves the build issue. Thank you!

Flags: needinfo?(petr.sumbera)
Assignee: nobody → pbz
Attachment #9297970 - Attachment description: WIP: Bug 1794551 - Add missing nsThreadUtils include in nsCookieBannerService.cpp. → Bug 1794551 - Add missing nsThreadUtils include in nsCookieBannerService.cpp.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true

Set release status flags based on info from the regressing bug 1784868

Pushed by pzuhlcke@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/cd61d346fe13
Add missing nsThreadUtils include in nsCookieBannerService.cpp. r=timhuang
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 107 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: