Bug 1794551 - Add missing nsThreadUtils include in nsCookieBannerService.cpp. r=timhuang

Differential Revision: https://phabricator.services.mozilla.com/D159031